--- a/HIGHER_RANKS/module.html
+++ b/HIGHER_RANKS/module.html
@@ -16,7 +16,7 @@
 <a><b>GRADING SYSTEM</b></a><br>
 <span><a>Class Participation</a><a>20%</a></span><br>
 <span><a>Enabling Assessment</a><a>50%</a></span><br>
-<span><a>Summative Assessment</a><a>30%</a></span><br>
+<span><a>Summative assessments</a><a>30%</a></span><br>
 
 ______________________________ <br>
 
